# llm-mddocgen

./: .gitignore  Dockerfile  README.md  docker-compose.yml  llm-mddocgen.toml.sample  pyproject.toml
.github/workflows/: publish.yml
examples/projects/: example-project.md  marcus-agrippa-research.md
examples/tasks/: example-task.md  marcus-agrippa-life-summary.md  memento-mori-script.md  roman-empire-book-review.md  roman-empire-reading-list.md  roman-statesmen.md
llm_mddocgen/: __init__.py  artifacts.py  cli.py  config.py  constants.py  frontmatter.py  loader.py  models.py  pdf.py  report.py  scanner.py  sources.py
llm_mddocgen/defaults/: global.md
llm_mddocgen/defaults/personas/: coder.md  copywriter.md  critic.md  diplomat.md  educator.md  historian.md  researcher.md  strategist.md  writer.md
llm_mddocgen/defaults/templates/: analysis.md  draft.md  plan.md  question.md  recommend.md  report.md
llm_mddocgen/retrieval/: fetch.py  websearch.py
llm_mddocgen/synthesis/: __init__.py  runner.py
personas/: advisor.md  analyst.md  engineer.md  manager.md
templates/: assessment.md  brief.md  code.md  critique.md  decision.md  design.md  detailed.md  instruct.md  proofread.md  research.md  review.md  summary.md
tests/: test_cli.py  test_config.py  test_frontmatter.py  test_runner.py  test_scanner.py
